--- a/css/style.css
+++ b/css/style.css
@@ -35,133 +35,6 @@ body {
 .titulos {
   color: rgba(50, 50, 40, 0.872); }
 
-/* estilos header */
-.logo {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  width: 70px;
-  height: 70px;
-  margin-left: 60px; }
-
-.navbar-nav {
-  margin-left: 150px; }
-
-.nav-item a {
-  display: inline-block;
-  margin-left: 40px;
-  font-size: 16px;
-  color: rgba(132, 132, 132, 0.872); }
-
-.nav-link::after {
-  content: "";
-  width: 0;
-  height: 5px;
-  background-color: #6e7051;
-  position: absolute;
-  bottom: 0;
-  right: 50%;
-  transition: all 0.5s;
-  will-change: width;
-  margin-left: 10px; }
-
-.nav-link:hover::after {
-  width: 100%;
-  right: 0; }
-
-/*Estilo footer*/
-#footer {
-  width: 100%;
-  background-color: rgba(155, 155, 154, 0.358);
-  grid-column: 1 / 13;
-  grid-row: 11 / 13; }
-
-#footer .grupo-1 {
-  width: 100%;
-  max-width: 1200px;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 50px;
-  padding: 45px 0px; }
-
-#footer .grupo-1 .box figure {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-
-#footer .grupo-1 li a {
-  color: rgba(132, 132, 132, 0.872); }
-
-#footer .grupo-1 .box figure img {
-  width: 100px; }
-
-#footer .grupo-1 .box h2 {
-  color: #fff;
-  margin-bottom: 25px;
-  font-size: 18px; }
-
-#footer .grupo-1 .box p {
-  color: #efefef;
-  margin-bottom: 10px; }
-
-#footer .grupo-1 .red-social a {
-  display: inline-block;
-  text-decoration: none;
-  width: 35px;
-  height: 35px;
-  line-height: 35px;
-  color: #fff;
-  margin-right: 10px;
-  background-color: rgba(132, 132, 132, 0.872);
-  text-align: center;
-  transition: all 300ms ease; }
-
-#footer .grupo-1 .red-social a:hover {
-  color: rgba(50, 50, 40, 0.872); }
-
-#footer .grupo-2 {
-  background-color: rgba(132, 132, 132, 0.872);
-  padding: 15px 10px;
-  text-align: center;
-  color: #fff; }
-
-#footer .grupo-2 small {
-  font-size: 15px; }
-
-@media screen and (max-width: 800px) {
-  #footer .grupo-1 {
-    width: 90%;
-    grid-template-columns: repeat(1, 1fr);
-    grid-gap: 30px;
-    padding: 35px 0px; } }
-
-/*Estilos main*/
-main {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 1rem;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 0 1rem;
-  margin-bottom: 3rem;
-  align-items: center; }
-
-#section1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1.5rem;
-  max-width: 1200px;
-  margin: 0 auto;
-  margin-top: 3rem;
-  flex-wrap: wrap;
-  padding: 0 1rem;
-  margin-bottom: 3rem; }
-
-/* estilo wpp */
 .float {
   position: fixed;
   width: 60px;
@@ -175,23 +48,126 @@ main {
   font-size: 30px;
   box-shadow: 2px 2px 3px #999;
   z-index: 100; }
+  .float:hover {
+    text-decoration: none;
+    color: #25d366;
+    background-color: #25d366; }
+  .float .my-float {
+    margin-top: 16px; }
 
-.float:hover {
-  text-decoration: none;
-  color: #25d366;
-  background-color: #25d366; }
+header .logo {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  width: 70px;
+  height: 70px;
+  margin-left: 60px;
+  margin-right: 200px; }
 
-.my-float {
-  margin-top: 16px; }
+header .navbar-nav {
+  justify-content: center;
+  text-align: center;
+  color: #6e7051; }
+  header .navbar-nav .nav-item a {
+    display: inline-block;
+    margin-left: 40px;
+    text-align: center;
+    text-decoration: none;
+    color: inherit;
+    padding: 15px;
+    font-family: 'Roboto', sans-serif;
+    position: relative;
+    color: #6e7051;
+    font-size: 15px; }
+    header .navbar-nav .nav-item a::after {
+      content: "";
+      width: 0;
+      height: 3px;
+      background-color: #6e7051;
+      position: absolute;
+      bottom: 0;
+      right: 50%;
+      transition: all 0.5s;
+      will-change: width;
+      margin-left: 10px; }
+    header .navbar-nav .nav-item a:hover::after {
+      width: 100%;
+      right: 0; }
 
-/* estilos index*/
-.bannerindex {
-  max-width: 100%; }
+#footer {
+  width: 100%;
+  background-color: rgba(155, 155, 154, 0.358);
+  grid-column: 1 / 13;
+  grid-row: 11 / 13; }
+  #footer .grupo-1 {
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 50px;
+    padding: 45px 0px; }
+    #footer .grupo-1 .box figure {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+      #footer .grupo-1 .box figure img {
+        width: 100px; }
+    #footer .grupo-1 .box h2 {
+      color: #fff;
+      margin-bottom: 25px;
+      font-size: 18px; }
+    #footer .grupo-1 .box p {
+      color: #efefef;
+      margin-bottom: 10px; }
+    #footer .grupo-1 li a {
+      color: rgba(132, 132, 132, 0.872); }
+    #footer .grupo-1 .red-social a {
+      display: inline-block;
+      text-decoration: none;
+      width: 35px;
+      height: 35px;
+      line-height: 35px;
+      color: #fff;
+      margin-right: 10px;
+      background-color: rgba(132, 132, 132, 0.872);
+      text-align: center;
+      transition: all 300ms ease; }
+      #footer .grupo-1 .red-social a:hover {
+        color: rgba(50, 50, 40, 0.872); }
+  #footer .grupo-2 {
+    background-color: rgba(132, 132, 132, 0.872);
+    padding: 15px 10px;
+    text-align: center;
+    color: #fff; }
+    #footer .grupo-2 small {
+      font-size: 15px; }
+  @media screen and (max-width: 800px) {
+    #footer .grupo-1 {
+      width: 90%;
+      grid-template-columns: repeat(1, 1fr);
+      grid-gap: 30px;
+      padding: 35px 0px; } }
 
-#articulosi {
+main {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  margin-bottom: 3rem; }
+
+.bannerindex {
+  max-width: 100%; }
+
+#section1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
   gap: 1.5rem;
   max-width: 1200px;
   margin: 0 auto;
@@ -200,74 +176,133 @@ main {
   padding: 0 1rem;
   margin-bottom: 3rem; }
 
-.articuloi {
+#articulosi {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   gap: 1.5rem;
-  flex: 1 1 clamp(300px, 30%, 400px); }
-
-.articuloi-title {
-  font-size: 1.5rem;
-  font-family: 'Roboto', sans-serif; }
-
-.articuloi-img {
-  width: 350px;
-  height: 300px; }
-
-/* estilos contacto*/
-.contactenos {
+  max-width: 1200px;
+  margin: 0 auto;
   margin-top: 3rem;
+  padding: 0 1rem;
+  margin-bottom: 3rem; }
+  #articulosi .articuloi {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+    flex: 1 1 clamp(300px, 30%, 400px); }
+    #articulosi .articuloi .articuloi-title {
+      font-size: 1.5rem;
+      font-family: "Roboto", sans-serif; }
+    #articulosi .articuloi .articuloi-img {
+      width: 350px;
+      height: 300px; }
+
+#book {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  background: rgba(132, 132, 132, 0.872);
+  color: #fff;
+  padding: 20px;
+  margin: 0 auto; }
+  #book h1 {
+    color: #fff; }
+    #book h1 span {
+      color: rgba(50, 50, 40, 0.872); }
+  #book input {
+    outline: none;
+    border: none;
+    width: 100%;
+    padding: 20px; }
+    #book input:nth-last-child(1) {
+      background-color: rgba(50, 50, 40, 0.872);
+      color: #fff; }
+
+.formulario {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  justify-content: center; }
+  .formulario .grid {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 3rem; }
+  .formulario .text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 3rem;
+    margin-bottom: 1rem; }
+  .formulario input {
+    outline: none;
+    border: none;
+    width: 100%; }
+
+.section2-reservas .carrusel-tit {
+  color: #fff;
+  font-size: 28px;
+  font-weight: bold; }
+
+.section2-reservas .carrusel-text {
   color: #fff; }
 
 #section1-contacto {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   font-weight: bold;
-  background-color: rgba(50, 50, 40, 0.872);
-  flex-wrap: wrap; }
-
-.container {
-  display: flex;
-  justify-content: center;
-  gap: 100px;
-  flex: wrap;
-  background-color: #fff;
-  margin-bottom: 3rem; }
-
-.form-control {
-  height: 36px;
-  background: #fff;
-  color: rgba(0, 0, 0, 0.8);
-  font-size: 14px;
-  border-radius: 2px;
-  box-shadow: none;
-  border: 1px solid rgba(0, 0, 0, 0.1); }
-
-.form-control:focus, .form-control:active {
-  border-color: rgba(132, 132, 132, 0.872);
-  border-radius: 5; }
-
-.form-label {
-  color: rgba(50, 50, 40, 0.872);
-  text-transform: uppercase;
-  font-size: 12px;
-  font-weight: 700;
-  margin-bottom: 0.5rem; }
-
-.btn.btn-primary {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  background: rgba(132, 132, 132, 0.872);
-  border-color: rgba(83, 83, 69, 0.872);
-  color: #fff;
-  width: 100px;
-  height: 50px;
-  border-radius: 5; }
-
-.btn.btn-primary:hover {
   background-color: rgba(50, 50, 40, 0.872); }
+  #section1-contacto .contactenos {
+    margin-top: 3rem;
+    color: #fff;
+    justify-content: center;
+    align-items: center; }
+  #section1-contacto .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 100px;
+    background-color: #fff;
+    margin-bottom: 3rem; }
+    #section1-contacto .container .form-control {
+      height: 36px;
+      background: #fff;
+      color: rgba(0, 0, 0, 0.8);
+      font-size: 14px;
+      border-radius: 2px;
+      box-shadow: none;
+      border: 1px solid rgba(0, 0, 0, 0.1); }
+      #section1-contacto .container .form-control:focus, #section1-contacto .container .form-control:active {
+        border-color: rgba(132, 132, 132, 0.872);
+        border-radius: 5; }
+    #section1-contacto .container .form-label {
+      color: rgba(50, 50, 40, 0.872);
+      text-transform: uppercase;
+      font-size: 12px;
+      font-weight: 700;
+      margin-bottom: 0.5rem; }
+    #section1-contacto .container .btn.btn-primary {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      background: rgba(132, 132, 132, 0.872);
+      border-color: rgba(83, 83, 69, 0.872);
+      color: #fff;
+      width: 100px;
+      height: 50px;
+      border-radius: 5; }
+      #section1-contacto .container .btn.btn-primary:hover {
+        background-color: rgba(50, 50, 40, 0.872); }
 
 @media only screen and (max-width: 600px) {
   .container {
@@ -281,46 +316,22 @@ main {
   flex-wrap: wrap;
   padding: 0 1rem;
   background-color: #fff; }
-
-.map {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 1200px; }
-
-.contactenos {
-  justify-content: center;
-  align-items: center; }
-
-.ubicacion {
-  color: rgba(50, 50, 40, 0.872);
-  background-color: #fff;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding-top: 30px;
-  margin-bottom: 1rem;
-  max-width: 1200px; }
-
-.info {
-  width: 100%;
-  padding: 20px;
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-  align-items: center; }
-
-.info h2 {
-  color: #fff;
-  margin-bottom: 1rem; }
-
-.info p {
-  color: #fff;
-  font-weight: lighter; }
-
-.info i {
-  margin-right: 10px;
-  color: #fff; }
+  #map .grupo-map .ubicacion {
+    color: rgba(50, 50, 40, 0.872);
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-top: 30px;
+    margin-bottom: 1rem;
+    max-width: 1200px; }
+    #map .grupo-map .ubicacion .map {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      max-width: 1200px; }
 
 #contact {
   display: flex;
@@ -329,48 +340,48 @@ main {
   flex-wrap: wrap;
   padding: 0 1rem;
   background-color: rgba(50, 50, 40, 0.872); }
+  #contact .info {
+    width: 100%;
+    padding: 20px;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    align-items: center; }
+    #contact .info h2 {
+      color: #fff;
+      margin-bottom: 1rem; }
+    #contact .info p {
+      color: #fff;
+      font-weight: lighter; }
+    #contact .info i {
+      margin-right: 10px;
+      color: #fff; }
 
-/* estilos galeria*/
-#section-galeria {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1.5rem;
-  max-width: 1200px;
-  margin: 0 auto;
-  margin-top: 3rem;
-  flex-wrap: wrap;
-  padding: 0 1rem;
-  margin-bottom: 1rem; }
+#section1 .cruce {
+  font-weight: bold;
+  color: rgba(132, 132, 132, 0.872); }
 
 #galeria {
   display: flex;
-  padding: 10px;
-  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+  padding: 10px;
   max-width: 1200px;
   margin: 0 auto;
   margin-top: 1rem;
   flex-wrap: wrap;
   padding: 0 1rem;
   margin-bottom: 3rem; }
-
-.cruce {
-  font-weight: bold;
-  color: rgba(132, 132, 132, 0.872); }
-
-.art-galeria {
-  display: flex;
-  flex: 25%;
-  flex-direction: column;
-  padding: 5px;
-  gap: 10px;
-  align-items: center; }
-
-.art__img {
-  margin-top: 5px;
-  width: 100%; }
+  #galeria .art-galeria {
+    display: flex;
+    flex: 25%;
+    flex-direction: column;
+    padding: 5px;
+    gap: 10px;
+    align-items: center; }
+    #galeria .art-galeria .art__img {
+      margin-top: 5px;
+      width: 100%; }
 
 @media (max-width: 800px) {
   .art-galeria {
@@ -380,11 +391,11 @@ main {
   .art-galeria {
     flex: 100%; } }
 
-/* estilos experiencias*/
 #section1-exp {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   gap: 1.5rem;
   max-width: 1200px;
   margin: 0 auto;
@@ -405,92 +416,27 @@ main {
   margin-bottom: 5rem;
   background-color: #fff;
   align-items: baseline; }
-
-.articulo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  gap: 1.5rem;
-  flex: 1 1 clamp(300px, 30%, 400px);
-  /* flex-grow: 1 ;
-      flex-shrink: 1 ;
-      flex-basis: clamp(300px, 30%, 400px); */ }
-
-.articulo__title {
-  font-size: 2rem;
-  font-family: 'Roboto', sans-serif;
-  color: rgba(132, 132, 132, 0.872);
-  align-items: center; }
-
-.articulo__button {
-  border: none;
-  background-color: rgba(132, 132, 132, 0.872);
-  color: #fff;
-  padding: 1rem 2rem;
-  font-weight: bold;
-  cursor: pointer;
-  border-radius: 100px;
-  align-items: center; }
-
-.articulo__img {
-  width: 200px;
-  height: 200px; }
-
-/* estilos reservas*/
-#book {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  background: rgba(132, 132, 132, 0.872);
-  color: #fff;
-  padding: 20px;
-  margin: 0 auto; }
-
-.formulario {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-  max-width: 1200px;
-  margin: 0 auto;
-  justify-content: center; }
-
-.grid {
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  margin-bottom: 3rem; }
-
-.text {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 3rem;
-  margin-bottom: 1rem; }
-
-input {
-  outline: none;
-  border: none;
-  width: 100%; }
-
-#book h1 span {
-  color: rgba(50, 50, 40, 0.872); }
-
-#book h1 {
-  color: #fff; }
-
-#book input {
-  padding: 20px; }
-
-#book input:nth-last-child(1) {
-  background-color: rgba(50, 50, 40, 0.872);
-  color: #fff; }
-
-.carrusel-tit {
-  color: #fff;
-  font-size: 28px;
-  font-weight: bold; }
-
-.carrusel-text {
-  color: #fff; }
+  #articulos .articulo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    gap: 1.5rem;
+    flex: 1 1 clamp(300px, 30%, 400px); }
+    #articulos .articulo .articulo__img {
+      width: 200px;
+      height: 200px; }
+    #articulos .articulo .articulo__title {
+      font-size: 2rem;
+      font-family: 'Roboto', sans-serif;
+      color: rgba(132, 132, 132, 0.872);
+      align-items: center; }
+    #articulos .articulo .articulo__button {
+      border: none;
+      background-color: rgba(132, 132, 132, 0.872);
+      color: #fff;
+      padding: 1rem 2rem;
+      font-weight: bold;
+      cursor: pointer;
+      border-radius: 100px;
+      align-items: center; }
