--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,7 @@
 @import "./layouts.scss/header";
 @import "./layouts.scss/footer";
 @import "./layouts.scss/main";
+@import "./layouts.scss/animaciones";
 
 // import views
 @import "./views/inicio";
