--- a/scss/views/_contacto.scss
+++ b/scss/views/_contacto.scss
@@ -1,3 +1,9 @@
+.bannercontacto {
+    max-width: 100%; }
+.bannercontacto:hover{
+    transform: scale(1.1);
+    transition: all 5s;
+}
 #section1-contacto {
     @include flex;
     font-weight: bold;
