--- a/scss/views/_reservas.scss
+++ b/scss/views/_reservas.scss
@@ -32,7 +32,8 @@ input {
     justify-content: center;
     .grid {
         margin: 0 auto;
-        @include flex;
+        display: flex;
+        align-items: center;
         gap: 20px;
         margin-bottom: 3rem;
     }
