se realizan modificaciones de animaciones

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,7 @@
 @import "./layouts.scss/animaciones";
 
 // import views
-@import "./views/inicio";
+@import "./views/index";
 @import "./views/reservas";
 @import "./views/contacto";
 @import "./views/galeria";
