--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ header .navbar-nav {
     font-family: 'Roboto', sans-serif;
     position: relative;
     color: #6e7051;
-    font-size: 15px; }
+    font-size: 18px; }
     header .navbar-nav .nav-item a::after {
       content: "";
       width: 0;
@@ -226,7 +226,11 @@ main {
       font-family: "Roboto", sans-serif; }
     #articulosi .articuloi .articuloi-img {
       width: 350px;
-      height: 300px; }
+      height: 300px;
+      max-width: 100%; }
+    #articulosi .articuloi .articuloi-img:hover {
+      transform: scale(1.1);
+      transition: all 5s; }
 
 #book {
   display: flex;
@@ -458,7 +462,11 @@ main {
     flex: 1 1 clamp(300px, 30%, 400px); }
     #articulos .articulo .articulo__img {
       width: 200px;
-      height: 200px; }
+      height: 200px;
+      max-width: 100%; }
+      #articulos .articulo .articulo__img :hover {
+        transform: scale(1.1);
+        transition: all 5s; }
     #articulos .articulo .articulo__title {
       font-size: 2rem;
       font-family: 'Roboto', sans-serif;
