--- a/scss/views/_index.scss
+++ b/scss/views/_index.scss
@@ -39,6 +39,11 @@
     .articuloi-img {
       width: 350px;
       height: 300px;
+      max-width: 100%;
     }
+    .articuloi-img:hover {
+      transform: scale(1.1);
+      transition: all 5s; 
+      }
   }
 }
