--- a/scss/views/_reservas.scss
+++ b/scss/views/_reservas.scss
@@ -1,55 +1,26 @@
-
-#book {
+#reserva{
+    background-color:rgba(50, 50, 40, 0.872);
     @include flex;
-    background: rgba(132, 132, 132, 0.872);
-    color: #fff;
-    padding: 20px;
-    margin: 0 auto;
-    h1 {
-    color: #fff;
-    span {
+    h1 { 
+    @include flex;
+    margin-top: 4rem;
+    margin-bottom: 2rem;
+    color: #fff;}
+    .col-lg-12{
+        margin-top: 4rem;
+        margin-bottom: 4rem;
+        height: 400px;
+        .row{
+            gap: 20px;
+        }
+    }
+}
+
+
+label{
     color: rgba(50, 50, 40, 0.872);
-    }
 }
 
-input {
-    outline: none;
-    border: none;
-    width: 100%;
-    padding: 20px;
-    &:nth-last-child(1) {
-    background-color: rgba(50, 50, 40, 0.872);
-    color: #fff;
-    }
-}
-}
-
-.formulario {
-    margin-top: 5rem;
-    margin-bottom: 5rem;
-    max-width: 1200px;
-    margin: 0 auto;
-    justify-content: center;
-    .grid {
-        margin: 0 auto;
-        display: flex;
-        align-items: center;
-        gap: 20px;
-        margin-bottom: 3rem;
-    }
-    .text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 3rem;
-    margin-bottom: 1rem;
-    }
-    input {
-    outline: none;
-    border: none;
-    width: 100%;
-}
-}
 .section2-reservas{
     .carrusel-tit {
         color: #fff;
