--- a/scss/layouts.scss/_header.scss
+++ b/scss/layouts.scss/_header.scss
@@ -43,9 +43,15 @@ header {
       }
     }
   }
-  
+
   @media (max-width: 800px) {
     .logo {
-        width: 300%; 
+        width: 100%; 
+    }
+  }
+
+  @media (max-width: 350px) {
+    .logo {
+        width:200%; 
     }
   }
