--- a/scss/layouts.scss/_header.scss
+++ b/scss/layouts.scss/_header.scss
@@ -50,8 +50,15 @@ header {
     }
   }
 
-  @media (max-width: 350px) {
+  @media (max-width: 400px) {
     .logo {
         width:200%; 
+        margin-left: 10px;
+    }
+  }
+
+  @media (max-width: 400px) {
+    .container-fluid {
+        flex-direction: column; 
     }
   }
